--- a/UnitTests/Windows.Forms/Windows.Forms.csproj
+++ b/UnitTests/Windows.Forms/Windows.Forms.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Vanara.Windows.Forms.Tests</RootNamespace>
     <AssemblyName>UnitTest.Windows.Forms</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <LangVersion>latest</LangVersion>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -111,6 +112,10 @@
     <ProjectReference Include="..\..\Windows.Shell\Vanara.Windows.Shell.csproj">
       <Project>{43685be2-a65e-4b01-be16-479526940f23}</Project>
       <Name>Vanara.Windows.Shell</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CSharpRunner\Shared.csproj">
+      <Project>{a96cff10-0967-429a-8700-4a86c97c5603}</Project>
+      <Name>Shared</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
