--- a/UnitTests/System/System.csproj
+++ b/UnitTests/System/System.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Vanara.System.Tests</RootNamespace>
     <AssemblyName>UnitTest.System</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <LangVersion>latest</LangVersion>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -101,6 +102,10 @@
     <ProjectReference Include="..\..\System\Vanara.SystemServices.csproj">
       <Project>{eeec146d-14b2-4eef-9155-e1aef82d85f6}</Project>
       <Name>Vanara.SystemServices</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CSharpRunner\Shared.csproj">
+      <Project>{a96cff10-0967-429a-8700-4a86c97c5603}</Project>
+      <Name>Shared</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
