--- a/UnitTests/System/System.csproj
+++ b/UnitTests/System/System.csproj
@@ -22,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -30,17 +31,17 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BackgroundCopyTests.cs" />
     <Compile Include="ComputerTests.cs" />
     <Compile Include="NetworkListTests.cs" />
+    <Compile Include="JobTests.cs" />
     <Compile Include="PowerTests.cs" />
     <Compile Include="RegTests.cs" />
-    <Compile Include="VirtualDiskTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="NUnit">
