--- a/System/Vanara.SystemServices.csproj
+++ b/System/Vanara.SystemServices.csproj
@@ -4,7 +4,7 @@
     <Description>Classes for system related items derived from the Vanara PInvoke libraries. Includes a class for working with virtual disks (including async methods), classes for BITS, and extensions for Process (privileges and elavation), FileInfo (compression info), and ServiceController (SetStartType) that pull extended information through native API calls.</Description>
     <Copyright>Copyright © 2017-2019</Copyright>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
-    <VersionPrefix>3.1.0</VersionPrefix>
+    <VersionPrefix>3.1.1</VersionPrefix>
     <TargetFrameworks>net20;net35;net40;net45;netstandard2.0;netcoreapp2.0;netcoreapp2.1;netcoreapp3.0</TargetFrameworks>
     <AssemblyName>Vanara.SystemServices</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
@@ -23,13 +23,10 @@
     <PackageReleaseNotes>Currently implements:
 
 Classes
-IEnumerableList&lt;T&gt;, INamedEntity, BackgroundCopyException, BackgroundCopyFileCollection, BackgroundCopyFileInfo, BackgroundCopyFileRange, BackgroundCopyFileRangesTransferredEventArgs, BackgroundCopyFileTransferredEventArgs, BackgroundCopyJob, BackgroundCopyJobCollection, BackgroundCopyJobCredential, BackgroundCopyJobCredentials, BackgroundCopyJobEventArgs, BackgroundCopyManager, Computer, FileInfoExtension, NetworkConnection, NetworkInterfaceExt, NetworkListManager, NetworkProfile, OpenFile, PathEx, PoweredDevice, PoweredDeviceCollection, PowerManager, PowerScheme, PowerSchemeCollection, PowerSchemeGroup, PowerSchemeGroupCollection, PowerSchemeSetting, PowerSchemeSettingCollection, ProcessExtension, RegistryEventArgs, RegistryEventMonitor, ServiceControllerAccessRule, ServiceControllerAuditRule, ServiceControllerExtension, ServiceControllerSecurity, ShareConnection, SharedDevice, SharedDevices, SystemShutdown, VirtualDisk, VirtualDiskMetadata, Wow64Redirect
-
-Structures
-BackgroundCopyFileRange, BackgroundCopyJobProgress, BackgroundCopyJobReplyProgress
+IEnumerableList&lt;T&gt;, INamedEntity, Computer, FileInfoExtension, IoCompletionPort, Job, JobEventArgs, JobHelper, JobLimits, JobNotificationEventArgs, JobNotifications, JobSecurity, JobSettings, JobStatistics, NetworkConnection, NetworkInterfaceExt, NetworkListManager, NetworkProfile, OpenFile, PathEx, PoweredDevice, PoweredDeviceCollection, PowerManager, PowerScheme, PowerSchemeCollection, PowerSchemeGroup, PowerSchemeGroupCollection, PowerSchemeSetting, PowerSchemeSettingCollection, ProcessExtension, RegistryEventArgs, RegistryEventMonitor, ServiceControllerAccessRule, ServiceControllerAuditRule, ServiceControllerExtension, ServiceControllerSecurity, ShareConnection, SharedDevice, SharedDevices, SystemShutdown, Wow64Redirect
 
 Enumerations
-BackgroundCopyACLFlags, BackgroundCopyCost, BackgroundCopyErrorContext, BackgroundCopyJobCredentialScheme, BackgroundCopyJobCredentialTarget, BackgroundCopyJobPriority, BackgroundCopyJobSecurity, BackgroundCopyJobState, BackgroundCopyJobType, BatteryStatus, DeviceType, EnergySaverStatus, NetworkInterfaceAccessType, NetworkInterfaceAdministrativeStatus, NetworkInterfaceConnectionType, NetworkInterfaceDirectionType, NetworkInterfaceMediaType, NetworkInterfacePhysicalMedium, PathCharType, PowerCapabilities, PowerSupplyStatus, ProcessIntegrityLevel, ServiceControllerAccessRights, ShareOfflineSettings, Subtype
+BatteryStatus, EnergySaverStatus, JobLimit, NetworkInterfaceAccessType, NetworkInterfaceAdministrativeStatus, NetworkInterfaceConnectionType, NetworkInterfaceDirectionType, NetworkInterfaceMediaType, NetworkInterfacePhysicalMedium, PathCharType, PowerCapabilities, PowerSupplyStatus, ProcessIntegrityLevel, ServiceControllerAccessRights, ShareOfflineSettings
 
 </PackageReleaseNotes>
     <LangVersion>latest</LangVersion>
