First pass at adding support for Windows Search

--- a/UnitTests/Windows.Shell/Windows.Shell.csproj
+++ b/UnitTests/Windows.Shell/Windows.Shell.csproj
@@ -46,6 +46,7 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ShellSearchTests.cs" />
     <Compile Include="ControlPanelTests.cs" />
     <Compile Include="ShellAssocTests.cs" />
     <Compile Include="ShellFileOperationsTests.cs" />
