Added SafeAnysizeStruct to help marshal stuctures with a 1-element field at the end that can be variable size. Adjusted all structs of this type to use this to marshal along with tests and supported classes.
BREAKING CHANGE: This forced the removal of PTOKEN_PRIVILEGES as that functionality is now in a shared marshaling class.

--- a/UnitTests/PInvoke/Shared/Shared.csproj
+++ b/UnitTests/PInvoke/Shared/Shared.csproj
@@ -33,11 +33,13 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Collections\ComEnumeratorTests.cs" />
+    <Compile Include="InteropServices\AnysizeStructTests.cs" />
     <Compile Include="InteropServices\CoTaskMemStringMarshalerTests.cs" />
     <Compile Include="InteropServices\SafeNativeArrayTests.cs" />
     <Compile Include="OverlappedAsyncTests.cs" />
