Updated project info for 3.1.2 release

--- a/PInvoke/SearchApi/Vanara.PInvoke.SearchApi.csproj
+++ b/PInvoke/SearchApi/Vanara.PInvoke.SearchApi.csproj
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <ProjectExtensions>
-    <SupportedDlls>
-    </SupportedDlls>
+    <SupportedDlls></SupportedDlls>
   </ProjectExtensions>
   <PropertyGroup>
     <Description>PInvoke API (methods, structures and constants imported from Windows Search.</Description>
