--- a/PInvoke/SearchApi/Vanara.PInvoke.SearchApi.csproj
+++ b/PInvoke/SearchApi/Vanara.PInvoke.SearchApi.csproj
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <ProjectExtensions>
-    <SupportedDlls>
-    </SupportedDlls>
+    <SupportedDlls></SupportedDlls>
   </ProjectExtensions>
   <PropertyGroup>
     <Description>PInvoke API (methods, structures and constants imported from Windows Search.</Description>
@@ -29,7 +28,7 @@
     <PackageReleaseNotes>Currently implements:
 
 Structures
-AUTHENTICATION_INFO, FILTERED_DATA_SOURCES, FILTERREGION, INCREMENTAL_ACCESS_INFO, ITEM_INFO, PROXY_INFO, SEARCH_COLUMN_PROPERTIES, SEARCH_ITEM_CHANGE, SEARCH_ITEM_INDEXING_STATUS, SEARCH_ITEM_PERSISTENT_CHANGE, TIMEOUT_INFO
+AUTHENTICATION_INFO, FILTERED_DATA_SOURCES, FILTERREGION, FULLPROPSPEC, INCREMENTAL_ACCESS_INFO, ITEM_INFO, PROXY_INFO, SEARCH_COLUMN_PROPERTIES, SEARCH_ITEM_CHANGE, SEARCH_ITEM_INDEXING_STATUS, SEARCH_ITEM_PERSISTENT_CHANGE, STAT_CHUNK, TIMEOUT_INFO
 
 Interfaces
 IEnumSearchRoots, IEnumSearchScopeRules, IFilter, ILoadFilter, IOpLockStatus, IProtocolHandlerSite, IRowsetEvents, IRowsetPrioritization, ISearchCatalogManager, ISearchCatalogManager2, ISearchCrawlScopeManager, ISearchCrawlScopeManager2, ISearchItemsChangedSink, ISearchLanguageSupport, ISearchManager, ISearchManager2, ISearchNotifyInlineSite, ISearchPersistentItemsChangedSink, ISearchProtocol, ISearchProtocol2, ISearchProtocolThreadContext, ISearchQueryHelper, ISearchRoot, ISearchScopeRule, ISearchViewChangedSink, IUrlAccessor, IUrlAccessor2, IUrlAccessor3, IUrlAccessor4, ISearchFolderItemFactory, IConditionFactory, IConditionFactory2, IEntity, INamedEntity, IQueryParser, IQueryParserManager, IQuerySolution, IRelationship, ISchemaLocalizerSupport, ISchemaProvider, ITokenCollection, ICondition, ICondition2, IRichChunk
