--- a/Vanara.Library.nuspec
+++ b/Vanara.Library.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>Vanara.Library</id>
     <title>Vanara Libraries Metapackage</title>
-    <version>3.1.5</version>
+    <version>3.1.6</version>
     <description>The full set of packages associated with the Vanara PInvoke Libraries.</description>
     <tags>pinvoke;vanara;net-extensions;interop</tags>
     <copyright>Copyright © 2017-2019</copyright>
@@ -16,46 +16,47 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <language>en-US</language>
     <dependencies>
-      <dependency id="Vanara.BITS" version="3.1.5" />
-      <dependency id="Vanara.Core" version="3.1.5" />
-      <dependency id="Vanara.PInvoke.Accessibility" version="3.1.5" />
-      <dependency id="Vanara.PInvoke.AclUI" version="3.1.5" />
-      <dependency id="Vanara.PInvoke.BITS" version="3.1.5" />
-      <dependency id="Vanara.PInvoke.Cabinet" version="3.1.5" />
-      <dependency id="Vanara.PInvoke.ComCtl32" version="3.1.5" />
-      <dependency id="Vanara.PInvoke.CredUI" version="3.1.5" />
-      <dependency id="Vanara.PInvoke.Cryptography" version="3.1.5" />
-      <dependency id="Vanara.PInvoke.DwmApi" version="3.1.5" />
-      <dependency id="Vanara.PInvoke.Gdi32" version="3.1.5" />
-      <dependency id="Vanara.PInvoke.IpHlpApi" version="3.1.5" />
-      <dependency id="Vanara.PInvoke.Kernel32" version="3.1.5" />
-      <dependency id="Vanara.PInvoke.KtmW32" version="3.1.5" />
-      <dependency id="Vanara.PInvoke.Mpr" version="3.1.5" />
-      <dependency id="Vanara.PInvoke.NetApi32" version="3.1.5" />
-      <dependency id="Vanara.PInvoke.NetListMgr" version="3.1.5" />
-      <dependency id="Vanara.PInvoke.NtDll" version="3.1.5" />
-      <dependency id="Vanara.PInvoke.NTDSApi" version="3.1.5" />
-      <dependency id="Vanara.PInvoke.Ole" version="3.1.5" />
-      <dependency id="Vanara.PInvoke.Pdh" version="3.1.5" />
-      <dependency id="Vanara.PInvoke.PowrProf" version="3.1.5" />
-      <dependency id="Vanara.PInvoke.SearchApi" version="3.1.5" />
-      <dependency id="Vanara.PInvoke.Security" version="3.1.5" />
-      <dependency id="Vanara.PInvoke.Shared" version="3.1.5" />
-      <dependency id="Vanara.PInvoke.Shell32" version="3.1.5" />
-      <dependency id="Vanara.PInvoke.ShlwApi" version="3.1.5" />
-      <dependency id="Vanara.PInvoke.TaskSchd" version="3.1.5" />
-      <dependency id="Vanara.PInvoke.User32" version="3.1.5" />
-      <dependency id="Vanara.PInvoke.UxTheme" version="3.1.5" />
-      <dependency id="Vanara.PInvoke.VirtDisk" version="3.1.5" />
-      <dependency id="Vanara.PInvoke.Wer" version="3.1.5" />
-      <dependency id="Vanara.PInvoke.WinINet" version="3.1.5" />
-      <dependency id="Vanara.PInvoke.WinTrust" version="3.1.5" />
-      <dependency id="Vanara.PInvoke.Ws2_32" version="3.1.5" />
-      <dependency id="Vanara.Security" version="3.1.5" />
-      <dependency id="Vanara.SystemServices" version="3.1.5" />
-      <dependency id="Vanara.VirtualDisk" version="3.1.5" />
-      <dependency id="Vanara.Windows.Forms" version="3.1.5" />
-      <dependency id="Vanara.Windows.Shell" version="3.1.5" />
+      <dependency id="Vanara.BITS" version="3.1.6" />
+      <dependency id="Vanara.Core" version="3.1.6" />
+      <dependency id="Vanara.PInvoke.Accessibility" version="3.1.6" />
+      <dependency id="Vanara.PInvoke.AclUI" version="3.1.6" />
+      <dependency id="Vanara.PInvoke.BITS" version="3.1.6" />
+      <dependency id="Vanara.PInvoke.Cabinet" version="3.1.6" />
+      <dependency id="Vanara.PInvoke.ComCtl32" version="3.1.6" />
+      <dependency id="Vanara.PInvoke.CredUI" version="3.1.6" />
+      <dependency id="Vanara.PInvoke.Cryptography" version="3.1.6" />
+      <dependency id="Vanara.PInvoke.DwmApi" version="3.1.6" />
+      <dependency id="Vanara.PInvoke.Gdi32" version="3.1.6" />
+      <dependency id="Vanara.PInvoke.IpHlpApi" version="3.1.6" />
+      <dependency id="Vanara.PInvoke.Kernel32" version="3.1.6" />
+      <dependency id="Vanara.PInvoke.KtmW32" version="3.1.6" />
+      <dependency id="Vanara.PInvoke.Mpr" version="3.1.6" />
+      <dependency id="Vanara.PInvoke.NetApi32" version="3.1.6" />
+      <dependency id="Vanara.PInvoke.NetListMgr" version="3.1.6" />
+      <dependency id="Vanara.PInvoke.NtDll" version="3.1.6" />
+      <dependency id="Vanara.PInvoke.NTDSApi" version="3.1.6" />
+      <dependency id="Vanara.PInvoke.Ole" version="3.1.6" />
+      <dependency id="Vanara.PInvoke.Pdh" version="3.1.6" />
+      <dependency id="Vanara.PInvoke.PowrProf" version="3.1.6" />
+      <dependency id="Vanara.PInvoke.Printing" version="3.1.6" />
+      <dependency id="Vanara.PInvoke.SearchApi" version="3.1.6" />
+      <dependency id="Vanara.PInvoke.Security" version="3.1.6" />
+      <dependency id="Vanara.PInvoke.Shared" version="3.1.6" />
+      <dependency id="Vanara.PInvoke.Shell32" version="3.1.6" />
+      <dependency id="Vanara.PInvoke.ShlwApi" version="3.1.6" />
+      <dependency id="Vanara.PInvoke.TaskSchd" version="3.1.6" />
+      <dependency id="Vanara.PInvoke.User32" version="3.1.6" />
+      <dependency id="Vanara.PInvoke.UxTheme" version="3.1.6" />
+      <dependency id="Vanara.PInvoke.VirtDisk" version="3.1.6" />
+      <dependency id="Vanara.PInvoke.Wer" version="3.1.6" />
+      <dependency id="Vanara.PInvoke.WinINet" version="3.1.6" />
+      <dependency id="Vanara.PInvoke.WinTrust" version="3.1.6" />
+      <dependency id="Vanara.PInvoke.Ws2_32" version="3.1.6" />
+      <dependency id="Vanara.Security" version="3.1.6" />
+      <dependency id="Vanara.SystemServices" version="3.1.6" />
+      <dependency id="Vanara.VirtualDisk" version="3.1.6" />
+      <dependency id="Vanara.Windows.Forms" version="3.1.6" />
+      <dependency id="Vanara.Windows.Shell" version="3.1.6" />
     </dependencies>
   </metadata>
   <files />
