--- a/PInvoke/Printing/Vanara.PInvoke.Printing.csproj
+++ b/PInvoke/Printing/Vanara.PInvoke.Printing.csproj
@@ -34,6 +34,8 @@ Structures
 HPTPROVIDER, ADDJOB_INFO_1, CORE_PRINTER_DRIVER, DATATYPES_INFO_1, DOC_INFO_1, DOC_INFO_2, DOC_INFO_3, DOCINFO, DRIVER_INFO_1, DRIVER_INFO_2, DRIVER_INFO_3, DRIVER_INFO_4, DRIVER_INFO_5, DRIVER_INFO_6, DRIVER_INFO_8, FORM_INFO_1, FORM_INFO_2, HPRINTER, HPRINTERCHANGENOTIFICATION, HSPOOLFILE, JOB_INFO_1, JOB_INFO_2, JOB_INFO_3, JOB_INFO_4, MONITOR_INFO_1, MONITOR_INFO_2, PORT_INFO_1, PORT_INFO_2, PORT_INFO_3, PRINT_EXECUTION_DATA, PRINTER_CONNECTION_INFO_1, PRINTER_ENUM_VALUES, PRINTER_INFO_1, PRINTER_INFO_2, PRINTER_INFO_3, PRINTER_INFO_4, PRINTER_INFO_5, PRINTER_INFO_6, PRINTER_INFO_7, PRINTER_INFO_8, PRINTER_INFO_9, PRINTER_NOTIFY_INFO, PRINTER_NOTIFY_INFO_DATA, PRINTER_NOTIFY_OPTIONS, PRINTER_NOTIFY_OPTIONS_TYPE, PRINTER_OPTIONS, PRINTPROCESSOR_CAPS_1, PRINTPROCESSOR_CAPS_2, PRINTPROCESSOR_INFO_1, PROVIDOR_INFO_1, PROVIDOR_INFO_2, NOTIFYDATA, DATA
 
 </PackageReleaseNotes>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <LangVersion>latest</LangVersion>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\Vanara.snk</AssemblyOriginatorKeyFile>
@@ -51,6 +53,11 @@ HPTPROVIDER, ADDJOB_INFO_1, CORE_PRINTER_DRIVER, DATATYPES_INFO_1, DOC_INFO_1, D
   <ItemGroup Condition=" $(TargetFramework.StartsWith('netstandard')) Or $(TargetFramework.StartsWith('netcore')) "></ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
+    <ProjectReference Include="..\Ole\Vanara.PInvoke.Ole.csproj" />
+    <ProjectReference Include="..\Opc\Vanara.PInvoke.Opc.csproj" />
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All"/>
   </ItemGroup>
 </Project>
